# bevy_2D_topdown_game

./: .gitignore  CMakeLists.txt  Cargo.toml  README.md
assets/tiled/maps/: dirt.tmx  sprout_land.tmj  sprout_land.tmx
assets/tiled/metadata/: fences.json  grass.json  hills.json  tilled_dirt.json  water.json  wooden_house.json
assets/tiled/tilesets/: fences.json  fences.tsx  grass.json  grass.tsx  hills.json  hills.tsx  tilled_dirt.json  tilled_dirt.tsx  water.json  water.tsx  wooden_house.json  wooden_house.tsx
src/: boundary.rs  global.rs  main.cpp  main.rs  map.rs  player.rs  tileset.rs
src/game/: boundary.rs  global.rs  map.rs  mod.rs  player.rs
src/headers/: character.h  graphics.h  shader.h  tileset.h
src/shaders/: fragment_shader.glsl  vertex_shader.glsl
